force-app/main/default/objects/Medical_Diagnosis__c/fields/SupplementIfAny__c.field-meta.xml
<CustomField>
    <fullName>SupplementIfAny__c</fullName>
    <label>Supplement If Any</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boost</fullName>
            </value>
            <value>
                <fullName>Bournvita</fullName>
            </value>
            <value>
                <fullName>Bournvita Women</fullName>
            </value>
            <value>
                <fullName>Complan</fullName>
            </value>
            <value>
                <fullName>Ensure</fullName>
            </value>
            <value>
                <fullName>Ensure Diabetes Care</fullName>
            </value>
            <value>
                <fullName>Horlicks</fullName>
            </value>
            <value>
                <fullName>Horlicks Lite</fullName>
            </value>
            <value>
                <fullName>Horlicks Protein+</fullName>
            </value>
            <value>
                <fullName>Protinex</fullName>
            </value>
            <value>
                <fullName>Woman&apos;s Horlicks</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>