force-app/main/default/objects/Medical_Diagnosis__c/fields/SurveyId__c.field-meta.xml
<CustomField>
    <fullName>SurveyId__c</fullName>
    <label>Survey Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>