force-app/main/default/objects/Medical_Diagnosis__c/fields/TotalFolates_mcg__c.field-meta.xml
<CustomField>
    <fullName>TotalFolates_mcg__c</fullName>
    <label>Total Folates (mcg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>