force-app/main/default/objects/Medical_Diagnosis__c/fields/Under_Weight__c.field-meta.xml
<CustomField>
    <fullName>Under_Weight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Weight</label>
    <type>Checkbox</type>
</CustomField>