force-app/main/default/objects/Medical_Diagnosis__c/fields/UsedEnsureEDC__c.field-meta.xml
<CustomField>
    <fullName>UsedEnsureEDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used Ensure/EDC</label>
    <type>Checkbox</type>
</CustomField>