force-app/main/default/objects/Medical_Diagnosis__c/fields/VisitationReason__c.field-meta.xml
<CustomField>
    <fullName>VisitationReason__c</fullName>
    <label>Visitation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>