force-app/main/default/objects/Medical_Diagnosis__c/fields/Vitamin_A_mcg__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_A_mcg__c</fullName>
    <label>Vitamin A (mcg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>