force-app/main/default/objects/Medical_Diagnosis__c/fields/Vitamin_C_mg__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_C_mg__c</fullName>
    <label>Vitamin C (mg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>