force-app/main/default/objects/Medical_Diagnosis__c/fields/VitaminB12_mcg__c.field-meta.xml
<CustomField>
    <fullName>VitaminB12_mcg__c</fullName>
    <label>Vitamin B12 (mcg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>