force-app/main/default/objects/Medical_Diagnosis__c/fields/WeightPercentileInterpretation__c.field-meta.xml
<CustomField>
    <fullName>WeightPercentileInterpretation__c</fullName>
    <label>Weight Percentile Interpretation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>