force-app/main/default/objects/Medical_Diagnosis__c/fields/WhatFlavorDoYouLetYourChildDrink__c.field-meta.xml
<CustomField>
    <fullName>WhatFlavorDoYouLetYourChildDrink__c</fullName>
    <label>What flavor do you let your child drink</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>香草口味</fullName>
            </value>
            <value>
                <fullName>牛奶口味</fullName>
            </value>
            <value>
                <fullName>兩個口味都喝</fullName>
            </value>
            <value>
                <fullName>忘了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>