force-app/main/default/objects/Medical_Diagnosis__c/fields/WhatFlavorInTheTrialPack__c.field-meta.xml
<CustomField>
    <fullName>WhatFlavorInTheTrialPack__c</fullName>
    <label>What flavor in the trial pack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>香草口味</fullName>
            </value>
            <value>
                <fullName>牛奶口味</fullName>
            </value>
            <value>
                <fullName>兩個口味都有</fullName>
            </value>
            <value>
                <fullName>忘了</fullName>
            </value>
            <value>
                <fullName>其他,請說明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>