force-app/main/default/objects/Medical_Diagnosis__c/fields/WhatPackingCapacityToBuy__c.field-meta.xml
<CustomField>
    <fullName>WhatPackingCapacityToBuy__c</fullName>
    <label>What Packing Capacity to Buy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>850g</fullName>
            </value>
            <value>
                <fullName>1600g</fullName>
            </value>
            <value>
                <fullName>850g X2 (宅配組)</fullName>
            </value>
            <value>
                <fullName>850g X2 (通路組)</fullName>
            </value>
            <value>
                <fullName>都買</fullName>
            </value>
            <value>
                <fullName>忘了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>