force-app/main/default/objects/Medical_Diagnosis__c/fields/Whattimeoftheday__c.field-meta.xml
<CustomField>
    <fullName>Whattimeoftheday__c</fullName>
    <label>What time of the day?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Mid Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>