force-app/main/default/objects/Medical_Diagnosis__c/fields/WhichformofPediasureisused__c.field-meta.xml
<CustomField>
    <fullName>WhichformofPediasureisused__c</fullName>
    <label>Which form of Pediasure is used?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>小安素水</fullName>
            </value>
            <value>
                <fullName>小安素粉 (香草口味)</fullName>
            </value>
            <value>
                <fullName>小安素粉 (牛奶口味)</fullName>
            </value>
            <value>
                <fullName>小安素粉</fullName>
                <isActive>false</isActive>
                <label>小安素粉</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>