force-app/main/default/objects/Medical_Diagnosis__c/fields/WhychilddidntcontinueusePediasure__c.field-meta.xml
<CustomField>
    <fullName>WhychilddidntcontinueusePediasure__c</fullName>
    <label>Why child didn&apos;t continue use Pediasure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>太甜</fullName>
            </value>
            <value>
                <fullName>小孩不喝，小孩不愛喝</fullName>
            </value>
            <value>
                <fullName>只是想試試</fullName>
            </value>
            <value>
                <fullName>效過不如預期, 效果不彰</fullName>
            </value>
            <value>
                <fullName>和一般奶粉/目前使用奶粉沒有差異</fullName>
            </value>
            <value>
                <fullName>認為透過飲食調整即可，不需使用到營養品</fullName>
            </value>
            <value>
                <fullName>價格因素, 太貴</fullName>
            </value>
            <value>
                <fullName>試用後有不適狀況(便秘、拉肚子、過敏、脹氣...etc)</fullName>
            </value>
            <value>
                <fullName>原用奶粉尚未用完/ 家中還有奶粉</fullName>
            </value>
            <value>
                <fullName>試用量不足以評估，放棄購買</fullName>
            </value>
            <value>
                <fullName>之後再購買</fullName>
            </value>
            <value>
                <fullName>其他(請註明)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>