force-app/main/default/objects/Medical_Diagnosis__c/fields/WhychilddidntcontinueuseSimilac__c.field-meta.xml
<CustomField>
    <fullName>WhychilddidntcontinueuseSimilac__c</fullName>
    <label>Why child didnt continue use Similac</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未改善(請備註原因)</fullName>
            </value>
            <value>
                <fullName>已改善(詢問是否知道可以長期使用?)是Y否N(請備註)</fullName>
            </value>
            <value>
                <fullName>母乳</fullName>
            </value>
            <value>
                <fullName>價格</fullName>
            </value>
            <value>
                <fullName>寶寶不喝</fullName>
            </value>
            <value>
                <fullName>購買不便利</fullName>
            </value>
            <value>
                <fullName>親友推薦</fullName>
            </value>
            <value>
                <fullName>延用上胎品牌</fullName>
            </value>
            <value>
                <fullName>難溶解</fullName>
            </value>
            <value>
                <fullName>太甜(請紀錄與什麼比較)</fullName>
            </value>
            <value>
                <fullName>其他廠牌提供試用</fullName>
            </value>
            <value>
                <fullName>醫護推薦</fullName>
            </value>
            <value>
                <fullName>藥局推薦</fullName>
            </value>
            <value>
                <fullName>原用品牌還有庫存</fullName>
            </value>
            <value>
                <fullName>其他(請備註)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>