force-app/main/default/objects/Medical_Diagnosis__c/fields/Whyifhaventopenthesample__c.field-meta.xml
<CustomField>
    <fullName>Whyifhaventopenthesample__c</fullName>
    <label>Why if haven&apos;t open the sample?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>前一個產品尚未使用完</fullName>
            </value>
            <value>
                <fullName>價格考量.貴</fullName>
            </value>
            <value>
                <fullName>母乳多</fullName>
            </value>
            <value>
                <fullName>先索試用.未決定換</fullName>
            </value>
            <value>
                <fullName>醫護推薦其他品牌</fullName>
            </value>
            <value>
                <fullName>還在比較再考慮</fullName>
            </value>
            <value>
                <fullName>手中有多家奶粉</fullName>
            </value>
            <value>
                <fullName>藥局推薦</fullName>
            </value>
            <value>
                <fullName>朋友推薦</fullName>
            </value>
            <value>
                <fullName>還不到換奶年齡</fullName>
            </value>
            <value>
                <fullName>醫生推薦狀況已好轉</fullName>
            </value>
            <value>
                <fullName>資料來源不正確(未收到體驗罐)</fullName>
            </value>
            <value>
                <fullName>懷孕中未生產</fullName>
            </value>
            <value>
                <fullName>不願意說&amp;其他原因：(請紀錄)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>