force-app/main/default/objects/Medical_Diagnosis__c/fields/Whythechilddidnttrythesample__c.field-meta.xml
<CustomField>
    <fullName>Whythechilddidnttrythesample__c</fullName>
    <label>Why the child didn&apos;t try the sample?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>沒有轉換意願</fullName>
            </value>
            <value>
                <fullName>忘記了</fullName>
            </value>
            <value>
                <fullName>不知道如何使用試用包</fullName>
            </value>
            <value>
                <fullName>之後才會喝</fullName>
            </value>
            <value>
                <fullName>沒有收到試用包</fullName>
            </value>
            <value>
                <fullName>其他(備註欄)</fullName>
            </value>
            <value>
                <fullName>沒有需求</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>