force-app/main/default/objects/Medical_Diagnosis__c/fields/WhyyouwantyourkidtotryPediasure__c.field-meta.xml
<CustomField>
    <fullName>WhyyouwantyourkidtotryPediasure__c</fullName>
    <label>Why you want your kid to try Pediasure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>小孩偏挑食, 補充營養</fullName>
            </value>
            <value>
                <fullName>小孩瘦小</fullName>
            </value>
            <value>
                <fullName>只是想試試, 想試喝看看</fullName>
            </value>
            <value>
                <fullName>小孩矮小</fullName>
            </value>
            <value>
                <fullName>小孩容易生病或提及任何疾病因素 (心臟病, 腸病毒, 常感冒…etc)</fullName>
            </value>
            <value>
                <fullName>早產兒</fullName>
            </value>
            <value>
                <fullName>食慾不佳</fullName>
            </value>
            <value>
                <fullName>小孩喜愛喝小安素</fullName>
            </value>
            <value>
                <fullName>有新口味</fullName>
            </value>
            <value>
                <fullName>聽說比較不甜</fullName>
            </value>
            <value>
                <fullName>其他 (請註明)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>